# cee

./: .gitignore  README.md  build_status.md  cee.code-workspace  paths.py  pyproject.toml
.template/: config.toml.default
agent_selector/: registry.py
bible/: 00_project_vision.md  01_real_problem_breakdown.md  02_user_roles.md  03_full_system_workflow.md  04_database_file_structure.md  05_prompt_engineering_rules.md  06_agent_system_design.md  07_skill_system_design.md  08_task_classification_engine.md  09_prompt_generator_engine.md  10_output_format_engine.md  11_hallucination_source_grounding.md  12_prompt_leak_security_rules.md  13_obsidian_integration.md  14_claude_code_integration.md  15_skill_file_structure.md  16_agent_file_structure.md  17_example_prompts_library.md  18_testing_quality_framework.md  19_error_handling_failure_states.md  20_production_build_plan.md  21_first_action_tasks.md  22_master_system_build_prompt.md  23_vscode_claude_code_setup.md
boot/: bible_sync.py  consistency.py  notion_mcp.py  sequencer.py
cli/: __init__.py  main.py
cli/commands/: __init__.py  audit_verify.py  init.py  scaffold_obsidian.py  sync_bible.py  verify.py
config_loader/: __init__.py  loader.py
errors/: __init__.py  exceptions.py  types.py
interpreter/: __init__.py  interpreter.py
llm/: __init__.py  anthropic_client.py
persistence/: __init__.py  atomic.py  audit.py  filesystem_writer.py  notion_writer.py  obsidian.py  obsidian_writer.py
prompts/: interpreter_system.txt
roles/: __init__.py
safety_gate/: __init__.py  confirmation.py  injection_scanner.py  redactor.py
schemas/: __init__.py  agent_frontmatter.py  agent_plan.py  clarification_request.py  classification.py  config.py  confirmation.py  credentials.py  execution_strategy.py  final_prompt.py  format_declaration.py  grounding_declaration.py  intent_object.py  promotion_queue.py  raw_input.py  redaction_log.py  run_error.py  run_summary.py  skill_frontmatter.py  skill_set.py  sync_meta.py
skill_engine/: parsers.py  registry.py
tests/: conftest.py
tests/integration/: test_bible_sync_e2e.py  test_boot_sequence.py  test_consistency_drift.py  test_persistence_chain.py  test_phase2_gate.py  test_phase3_gate.py
tests/unit/: test_paths.py
tests/unit/test_agent_selector/: test_registry.py
tests/unit/test_boot/: test_bible_sync.py  test_consistency.py  test_notion_mcp.py  test_sequencer.py
tests/unit/test_cli/: test_audit_verify_command.py  test_init_command.py  test_main.py  test_scaffold_obsidian_command.py  test_sync_bible.py  test_verify_command.py
tests/unit/test_config_loader/: test_loader.py
tests/unit/test_errors/: test_exceptions.py  test_types.py
tests/unit/test_interpreter/: test_context.py  test_interpreter.py  (+1 more)
(+33 files in other folders)
